versions/v1.4/modules/en/pages/add-ons/lvm-local-storage.adoc
= Local Storage Support

Harvester v1.4.0 allows you to use local storage on the host to create persistent volumes for your workloads with better performance and latency. This functionality is made possible by LVM, which provides logical volume management facilities on Linux.

== Install and Enable harvester-csi-driver-lvm

The `harvester-csi-driver-lvm` add-on is a CSI driver that supports local path provisioning through LVM. It is not packaged into the Harvester ISO, but is available in the https://github.com/harvester/experimental-addons[experimental-addons] repository.

If you are using the Harvester kubeconfig file, you can perform the following steps:

. Install the add-on by running the following command:
+
[,console]
----
# kubectl apply -f https://raw.githubusercontent.com/harvester/experimental-addons/main/harvester-csi-driver-lvm/harvester-csi-driver-lvm.yaml
----
+
. On the Harvester UI, go to *Advanced -> Add-ons*.
+
. Select *harvester-csi-driver-lvm (Experimental)*, and then select *⋮ -> Enable*.
+
image::csi-driver-lvm/enable-lvm-addon.png[]

== Create a Volume Group for LVM

A volume group combines physical volumes to create a single storage structure that can be divided into logical volumes.

[NOTE]
====
Harvester currently does not allow you to modify the volume group composition (add or remove disks) after you create a logical volume. This issue will be addressed in a future release.
====

. Verify that the `+harvester-csi-driver-lvm+` add-on is installed.
+
. On the Harvester UI, go to the *Hosts* screen.
+
. Select the target host, and then select *⋮ -> Edit Config*.
+
. On the *Storage* tab, add disks for the volume group.
+
image::csi-driver-lvm/add-disk-to-vg-01.png[]
+
Configure the following settings for each selected disk:
+
** *Provisioner*: Select *LVM*.
+
image::csi-driver-lvm/add-disk-to-vg-02.png[]
+
** *Volume Group*: Select an existing volume group or specify a name for a new volume group.
+
image::csi-driver-lvm/add-disk-to-vg-03.png[]
+
For more information about adding disks, see xref:../hosts/hosts.adoc#multi-disk-management[Multi-Disk Management].
+
. Click *Save*.
+
. On the host details screen, verify that the disks were added and the correct provisioner was set.
+
image::csi-driver-lvm/add-disk-to-vg-04.png[]

== Create a StorageClass for LVM

[NOTE]
====
You can only use one type of local volume in each volume group. If necessary, create different volume groups for the volume types that you want to use.
====

. On the Harvester UI, go to the *Storage* screen.
+
. Create a new StorageClass and select *LVM* in the *Provisioner* list.
+
image::csi-driver-lvm/create-lvm-sc-01.png[]
+
. On the *Parameters* tab, configure the following settings:
+
** *Node*: Select the target node for the intended workloads. 
+
image::csi-driver-lvm/create-lvm-sc-02.png[]
+
** *Volume Group Name*: Select the volume group that you created.
+
image::csi-driver-lvm/create-lvm-sc-03.png[]
+
** *Volume Group Type*: Select the type of local volume that matches your requirements. Harvester currently supports *striped** and *dm-thin*.
+
image::csi-driver-lvm/create-lvm-sc-04.png[]
+
. Click *Save*.
+
. On the *Storage* screen, verify that the StorageClass was created and the correct provisioner was set.
+
image::csi-driver-lvm/create-lvm-sc-05.png[]

For more information, see xref:../storage/storageclass.adoc[StorageClass].

== Create a Volume with LVM

. On the Harvester UI, go to the *Volumes* screen.
+
. Create a new volume using the LVM StorageClass that you created.
+
image::csi-driver-lvm/create-lvm-volume-01.png[]
+
[NOTE]
====
The status *Not Ready* is normal because Harvester creates the LVM volume only when the first workload is created.
====
+
. On the *Virtual Machines* screen, select the target virtual machine, and then select *⋮ -> Add Volume*.
+
[NOTE]
====
Because the LVM volume is a local volume, you must ensure that the target node of the LVM StorageClass is the node on which the virtual machine is scheduled.
====
+
. Specify the volume that you want to attach.
+
image::csi-driver-lvm/attach-lvm-volume-01.png[]
+
. On the *Volumes* screen, verify that the state is *In-use*.
+
image::csi-driver-lvm/attach-lvm-volume-02.png[]

You can also create a new virtual machine with the volume of the LVM StorageClass that you created. This virtual machine will be scheduled on the target node with local storage for the volume.

image::csi-driver-lvm/create-vm-with-lvm-volume-01.png[]

image::csi-driver-lvm/create-vm-with-lvm-volume-02.png[]

== Create Snapshots for an LVM Volume

. On the Harvester UI, go to the *Settings* screen.
+
. In the *csi-driver-config* section, select *⋮ -> Edit Setting*.
+
image::csi-driver-lvm/update-csi-driver-config-01.png[]

. Add an entry with the following settings:
+
** *Provisioner*: Select *lvm.driver.harvesterhci.io*.
** *Volume Snapshot Class Name*: Select *lvm-snapshot*.
+
You may encounter certain limitations when creating and restoring xref:../storage/csidriver.adoc#_virtual_machine_backup_compatibility[backups that involve external storage].

. On the *Virtual Machines* screen, select the target virtual machine, and then select *⋮ -> Take Virtual Machine Snapshot*.
+
Example:
+
image::csi-driver-lvm/vm-take-snapshot-with-lvm-01.png[]

. On the *Virtual Machine Snapshots* screen, verify that snapshot is ready to use.
+
image::csi-driver-lvm/vm-take-snapshot-with-lvm-02.png[]

== Supported LVM Volume Features

* Volume resizing
* Volume cloning
* Snapshot creation

[IMPORTANT]
====
Backup creation is currently not supported. This limitation will be addressed in a future release.
====